# codealpha_tasks

./: .gitignore  LICENSE  README.md
FAQ_Chatbot/: .env.example  README.md  app.py  faqs.json  nlp_processor.py  requirements.txt  test_nlp.py
Object_Detection/: README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
Object_Detection/src/object_detection/: __init__.py  app.py  tracker.py
Object_Detection/tests/: test_tracker.py
